--- a/budget/budgetexplore/notes.html
+++ b/budget/budgetexplore/notes.html
@@ -1,3 +1,5 @@
 NEXT 9-9-16:
 
 Make <li> show up as buttons that do something when clicked
+
+What goes into html div and what goes with jquery down below? 
