--- a/budget/budgetexplore/index.html
+++ b/budget/budgetexplore/index.html
@@ -44,7 +44,10 @@
       .controls .menu {
         text-transform: uppercase;
       }
+      .button.hollow.succes.contractual-services {
+        background-color: #FF69B4
 
+      }
 
     </style>
   </head>
