--- a/budget/budgetexplore/notes.html
+++ b/budget/budgetexplore/notes.html
@@ -1,5 +1,12 @@
+NEXT 9-15-16:
+
+List items within buckets
+Color code based on type (uses)
+Connect file with descriptions
+Hover to show agency / type
+Show $ and % of total
+Search for items in descrition, agency, type, item name
+
 NEXT 9-9-16:
 
 Make <li> show up as buttons that do something when clicked
-
-What goes into html div and what goes with jquery down below?
