--- a/budget/budgetexplore/notes.html
+++ b/budget/budgetexplore/notes.html
@@ -1,3 +1,9 @@
+NEXT 9-20-16:
+List items within buckets
+Connect file with descriptions
+Search for items in descrition, agency, type, item name
+Explanation of individual classes and Agencies
+
 NEXT 9-15-16:
 
 List items within buckets
