--- a/budget/budgetexplore/notes.html
+++ b/budget/budgetexplore/notes.html
@@ -1,8 +1,11 @@
 NEXT 9-20-16:
+
+Categories as buttons
 List items within buckets
 Connect file with descriptions
 Search for items in descrition, agency, type, item name
 Explanation of individual classes and Agencies
+Schedule C included somewhere
 
 NEXT 9-15-16:
 
