--- a/budget/budgetexplore/notes.html
+++ b/budget/budgetexplore/notes.html
@@ -1,7 +1,7 @@
 NEXT 9-20-16:
 
 Categories as buttons
-List items within buckets
+List items within buckets - Object Code Name (show most recent publish date and >0)
 Connect file with descriptions
 Search for items in descrition, agency, type, item name
 Explanation of individual classes and Agencies
